--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>I am Data processing technician from Technical School of Campinas State University Unicamp (Cotuca), former student of Electrical engineering at Poli USP, currently scholarship holder student at FGV. I've collect some awards, such as, Silver Medal in Olympiad of Physics, winner of Hackathon of Gender and Citizenship of Lower House and IEEEXtreme Organizer, fifth in the worldwide with the team @Iamsuaandorinhamae <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+            <p>I am Data processing technician from Technical School of Campinas State University Unicamp (Cotuca), former student of Electrical engineering at Poli USP, currently scholarship holder student at FGV. I've collect some awards, such as, Silver Medal in Olympiad of Physics, winner of Hackathon of Gender and Citizenship of Lower House and IEEEXtreme Organizer, fifth in the worldwide with the team @Iamsuaandorinhamae <a href="" target="_blank">Learn More</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
