--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
+                      <div class="h4">Machine Learning</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Startup Project</div>
+                      <div class="h4">Time Series Analysis</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
@@ -135,14 +135,14 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Food Order Project</div>
+                      <div class="h4">Web Scraping</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Web Advertising Project</div>
+                      <div class="h4">Data Visualization</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
