--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
           <div class="container">
-            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Rafael Reis CV</a>
+            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Rafael Reis</a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -62,7 +62,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>I am Data processing technician from Technical School of Campinas State University Unicamp (Cotuca), former student of Electrical engineering at Poli USP, currently scholarship holder student at FGV. I've collect some awards, such as, Silver Medal in Olympiad of Physics, winner of Hackathon of Gender and Citizenship of Lower House and IEEEXtreme Organizer, fifth in the worldwide with the team @Iamsuaandorinhamae <a href="" target="_blank">Learn More</a></p>
+            <p>I am Data processing technician from Technical School of Campinas State University Unicamp (Cotuca), Graduated Associate Degree in Finance at Saint Paul Escola de Negócios, former student of Electrical engineering at Poli USP, currently scholarship holder student in BBA at FGV and  scholarship holder student in Computer Science at Uopeople . I've collect some awards, such as, Silver Medal in Olympiad of Physics, winner of Hackathon of Gender and Citizenship of Lower House and IEEEXtreme, fifth in the worldwide. <a href="" target="_blank">Learn More</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -117,39 +117,57 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/machineLearning.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Machine Learning</div>
-                      <p>Web Development</p>
+                      <p>Machine learning is a subfield of artificial intelligence (AI). The goal of machine learning generally is to understand the structure of data and fit that data into models that can be understood and utilized by people.</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/timeSeries.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Time Series Analysis</div>
-                      <p>Web Development</p>
+                      <p>Time series analysis is a statistical technique that deals with time series data, or trend analysis.  Time series data means that data is in a series of  particular time periods or intervals.</p>
                     </figcaption>
                   </figure></a></div>
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/webScraping.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Web Scraping</div>
-                      <p>Web Development</p>
+                      <p>Web scraping is the process of using bots to extract content and data from a website</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/DataVisualization.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Data Visualization</div>
-                      <p>Web Development</p>
+                      <p>Data visualization is the graphical representation of information and data. By using visual elements like charts, graphs, and maps, data visualization tools provide an accessible way to see and understand trends, outliers, and patterns in data.</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/pyGuide.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">PyGuide</div>
+                      <p>PyGuide offers image analysis routines for telescope guiding, including a star finder, centroider and star shape fitter.</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/machineLearningGuide.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">ML Guide</div>
+                      <p>Machine = Your machine or computer <br>Learning = Finding patterns in data</p>
                     </figcaption>
                   </figure></a></div>
             </div>
           </div>
         </div>
-      </div>
+      </div>  <!--
       <div class="tab-pane" id="graphic-design" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
@@ -188,6 +206,7 @@
           </div>
         </div>
       </div>
+    
       <div class="tab-pane" id="Photography" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
@@ -258,7 +277,7 @@
                           </figcaption>
                         </figure></a></div>
                   </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
@@ -493,7 +512,7 @@
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Rafael Reis</div>
       <div class="text-center text-muted">
-        <p>&copy; Rafael Reis CV. All rights reserved.<br>Design - <a class="credit" href=" target="_blank"></a></p>
+        <p>&copy; Rafael Reis. All rights reserved.<br>Design - <a class="credit" href=" target="_blank"></a></p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js"></script>
