--- a/index.html
+++ b/index.html
@@ -297,7 +297,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Fixed Income Analyst - Xp Inc</div>
-            <p></p>
+            <p><ul>
+               <li>Repurchase Agreement (Repo) https://www.investopedia.com/terms/r/repurchaseagreement.asp</li>
+               <li> RPA automate trade matching and settlement</p></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -313,7 +316,15 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Equity Trading Intern </div>
-            <p></p>
+            <p>
+              <ul>
+                <li>Running daily Client Position and End of Day Results reports.</li>
+                <li>Assisting on client support and trade input.</li>
+                <li>Improving/automating spreadsheets and routines.</li>
+                <li>Aligning workflow with Trading Desk, Back-Office and Middle-Office.</li>
+                <li>Supporting the team on intraday activities.</li>
+            </ul>
+            </p>
           </div>
         </div>
       </div>
@@ -329,7 +340,13 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Equity Trading Intern </div>
-            <p></p>
+            <p>     <ul>
+              <li>Running daily Client Position and End of Day Results reports.</li>
+              <li>Assisting on client support and trade input.</li>
+              <li>Improving/automating spreadsheets and routines.</li>
+              <li>Aligning workflow with Trading Desk, Back-Office and Middle-Office.</li>
+              <li>Supporting the team on intraday activities.</li>
+          </ul></p>
           </div>
         </div>
       </div>
@@ -343,14 +360,30 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2018 - 2012</p>
+            <p>2018 - 2022</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Bachelor of Business Administration</div>
-            <p class="category"></p>
+            <p class="category">Fundação Getúlio Vargas - FGV</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2020 - 2021</p>
+            <div class="h5">Associate's Degree</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Computer Science</div>
+            <p class="category">University of the People</p>
           </div>
         </div>
       </div>
