--- a/index.html
+++ b/index.html
@@ -400,7 +400,12 @@
           <div class="card-body">
             <div class="h5">Bachelor of Electrical Engineering</div>
             <p class="category">University of São Paulo</p>
-            <p></p>
+            <p>
+              <ul>
+                <li>Winner of Gender and Citizenship Hackathon of Lower House - Brasília, DF ⚡</li>
+                <li>IEEEXtreme 2016 5th worldwide</li>
+            </ul>
+            </p>
           </div>
         </div>
       </div>
