--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/datacamp.png" alt="Image"/>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/datacamp.jpg" alt="Image"/>
                 <div class="h7 pt-2">Datacamp</div>
                 <p class="category"></p>
               </div>
@@ -472,7 +472,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/python.png" alt="Image"/>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/python.jpg" alt="Image"/>
                 <div class="h7 pt-2">Pythonizando todo dia</div>
                 <p class="category">CEO / WEBM</p>
               </div>
