--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <p>Machine learning is a subfield of artificial intelligence (AI). The goal of machine learning generally is to understand the structure of data and fit that data into models that can be understood and utilized by people.</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/timeseries" target="_blank">
                   <figure class="cc-effect"><img src="images/timeSeries.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Time Series Analysis</div>
