mudancas na html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <p>Machine learning is a subfield of artificial intelligence (AI). The goal of machine learning generally is to understand the structure of data and fit that data into models that can be understood and utilized by people.</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/timeseries" target="_blank">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/timeseries" >
                   <figure class="cc-effect"><img src="images/timeSeries.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Time Series Analysis</div>
@@ -386,6 +386,25 @@
             <div class="h5">Computer Science</div>
             <p class="category">University of the People</p>
             Scholarship holder ✍
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2015 - 2017</p>
+            <div class="h5">Associate's Degree</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Associate Degree in Finance</div>
+            <p class="category">Saint Paul Escola de Negócios</p>
+            <p>
+              Scholarship holder ✍
+            </p>
           </div>
         </div>
       </div>
