--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/timeseries" >
-                  <figure class="cc-effect"><img src="images/timeSeries.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/timeSeries.png" alt="Image" target="_blank"/>
                     <figcaption>
                       <div class="h4">Time Series Analysis</div>
                       <p>Time series analysis is a statistical technique that deals with time series data, or trend analysis.  Time series data means that data is in a series of  particular time periods or intervals.</p>
@@ -133,14 +133,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/webScraping">
-                  <figure class="cc-effect"><img src="images/webScraping.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/webScraping.jpg" alt="Image" target="_blank"/>
                     <figcaption>
                       <div class="h4">Web Scraping</div>
                       <p>Web scraping is the process of using bots to extract content and data from a website</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/DataVisualization.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/DataVisualization">
+                  <figure class="cc-effect"><img src="images/DataVisualization.jpg" alt="Image"  target="_blank"/>
                     <figcaption>
                       <div class="h4">Data Visualization</div>
                       <p>Data visualization is the graphical representation of information and data. By using visual elements like charts, graphs, and maps, data visualization tools provide an accessible way to see and understand trends, outliers, and patterns in data.</p>
@@ -148,8 +148,8 @@
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/pyGuide.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/compare/pyguide">
+                  <figure class="cc-effect"><img src="images/pyGuide.jpg" alt="Image"  target="_blank"/>
                     <figcaption>
                       <div class="h4">PyGuide</div>
                       <p>PyGuide offers image analysis routines for telescope guiding, including a star finder, centroider and star shape fitter.</p>
@@ -157,8 +157,8 @@
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/machineLearningGuide.png" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/compare/mlguide">
+                  <figure class="cc-effect"><img src="images/machineLearningGuide.png" alt="Image" target="_blank"/>
                     <figcaption>
                       <div class="h4">ML Guide</div>
                       <p>Machine = Your machine or computer <br>Learning = Finding patterns in data</p>
